--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,10 @@ body {
     border-radius: 4%;
     cursor: pointer;
     box-shadow: 0px 0px 5px 1px;
-
+    -webkit-transition-duration: o.3sec;
+    transition-duration: o.3sec;
+    -webkit-transition-property: box-shadow, transform;
+    transition-property: box-shadow, transform;
 }
 
 .select:hover,
@@ -310,6 +313,8 @@ footer>p {
     }
 
     .header-title {
+        margin-top: 5px;
+        width: 20%;
         display: flex;
         align-items: center;
         font-size: 20px;
@@ -320,7 +325,7 @@ footer>p {
     }
 
     #header-img {
-        margin: 10px;
+        margin-top: 20px;
         width: 70px;
         height: 65px;
         background: #fff;
@@ -337,7 +342,7 @@ footer>p {
         width: 45%;
         gap: 5px;
         margin-top: 0px;
-        margin-left: 380px;
+        margin-left: 55%;
     }
 
     #nav-bar .nav-link {
@@ -395,7 +400,7 @@ footer>p {
         justify-content: space-between;
         gap: 20px;
         align-items: center;
-        margin: 250px 90px 0px 50px;
+        margin: 250px 90px 0px 0px;
     }
 
 
@@ -492,7 +497,7 @@ footer>p {
 
     .product-card {
         font-size: 12px;
-        width: 225px;
+        width: 65%;
         display: flex;
         flex-direction: column;
         align-items: center;
